--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "tera-launcher",
+  "author": {
+    "name": "Developer Pino"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
